# deepface

./: .env  .gitattributes  .gitignore  .pdm-python  README.md  pyproject.toml
deepface/: DeepFace.py
deepface/api/src/modules/core/: routes.py  service.py
deepface/cli/: detect.py  verify.py
deepface/commons/: weight_utils.py
deepface/commons/agendrix/: argparser.py  constants.py  image_processing.py  redis.py
deepface/modules/: representation.py  verification.py
scripts/: detect.py  threshold.py  verify.py
tests/: benchmark_models.py  model-evaluation-test.py
tests/results/: benchmark1.csv  benchmark2.csv  benchmark3.csv  benchmark4.csv  data.benchmark1.csv  data.benchmark2.csv  data.benchmark3.csv  data.benchmark4.csv
